--- a/src/test/resources/huge_tree.yml
+++ b/src/test/resources/huge_tree.yml
@@ -10,51 +10,50 @@ setters:
     properties:
       inner:
         material: Leaves
-        data: 3
         odd: 100
       outer:
         material: Leaves
-        data: 3
         odd: 75
   wood:
     type: simple
     properties:
       material: Log
-      data: 3
 
 conditions:
   ground:
-    shape: cuboid
-    mode: include
-    size:
-      x: 2
-      y: 1
-      z: 2
-    position:
-      x: 0
-      y: -1
-      z: 0
-    check:
-      - Grass
-      - Dirt
+    type: cuboid
+    properties:
+      mode: include
+      size:
+        x: 2
+        y: 1
+        z: 2
+      position:
+        x: 0
+        y: -1
+        z: 0
+      check:
+        - Grass
+        - Dirt
   main:
-    shape: cuboid
-    mode: exclude
-    size:
-      x: 6
-      y: height
-      z: 6
-    position:
-      x: -2
-      y: 0
-      z: -2
-    check:
-      - Water
-      - Grass
-      - Dirt
-      - Stone
-      - Log
-      - Leaves
+    type: cuboid
+    properties:
+      mode: exclude
+      size:
+        x: 6
+        y: height
+        z: 6
+      position:
+        x: -2
+        y: 0
+        z: -2
+      check:
+        - Water
+        - Grass
+        - Dirt
+        - Stone
+        - Log
+        - Leaves
 
 instructions:
   leafPod:
@@ -63,65 +62,69 @@ instructions:
       angle: ranF(0, 2) * PI
       offsetX: sin(angle) * 6
       offsetZ: cos(angle) * 6
-    shapes:
-      leafPod:
-        type: sphere
-        size:
-          x: ranI=2-4
-          y: ranI=2-4
-          z: ranI=2-4
-        position:
-          x: offsetX
-          y: minLeafHeight
-          z: offsetZ
-        material: leaves
-      branch:
-        type: line
-        size:
-          x: offsetX
-          y: 3
-          z: offsetZ
-        position:
-          x: 0
-          y: minLeafHeight - 3
-          z: 0
-        material: wood
+    properties:
+      shapes:
+        leafPod:
+          type: sphere
+          size:
+            x: ranI=2-4
+            y: ranI=2-4
+            z: ranI=2-4
+          position:
+            x: offsetX
+            y: minLeafHeight
+            z: offsetZ
+          material: leaves
+        branch:
+          type: line
+          size:
+            x: offsetX
+            y: 3
+            z: offsetZ
+          position:
+            x: 0
+            y: minLeafHeight - 3
+            z: 0
+          material: wood
   leafPods:
     type: repeat
-    repeat: leafPod
-    times: ranI=5-8
-    increment:
-      minLeafHeight: ranI=1-3
+    properties:
+      repeat: leafPod
+      times: ranI=5-8
+      increment:
+        minLeafHeight: ranI=1-3
   main:
     type: shape
-    shapes:
-      canopy:
-        type: sphere
-        size:
-          x: ranI=5-6
-          y: ranI=2-3
-          z: ranI=5-6
-        position:
-          x: 0
-          y: height + 1
-          z: 0
-        material: leaves
-      trunk:
-        type: cuboid
-        size:
-          x: 2
-          y: height
-          z: 2
-        position:
-          x: 0
-          y: 0
-          z: 0
-        material: wood
-  test:
+    properties:
+      shapes:
+        canopy:
+          type: sphere
+          size:
+            x: ranI=5-6
+            y: ranI=2-3
+            z: ranI=5-6
+          position:
+            x: 0
+            y: height + 1
+            z: 0
+          material: leaves
+        trunk:
+          type: cuboid
+          size:
+            x: 2
+            y: height
+            z: 2
+          position:
+            x: 0
+            y: 0
+            z: 0
+          material: wood
+  top:
     type: block
-    position:
-      x: 0
-      y: height
-      z: 0
-    material: wood
-    outer: true
+    properties:
+      position:
+        x: 0
+        y: height
+        z: 0
+      material: wood
+      outer: true
